Bug 415528 - KMessageWidget turns from blurry to sharp during animatedShow() at 1.5x scale factor
Summary: KMessageWidget turns from blurry to sharp during animatedShow() at 1.5x scale...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.65.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-24 14:30 UTC by postix
Modified: 2020-02-25 12:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.67
Sentry Crash Report:


Attachments
Video of the issue. (203.09 KB, video/mp4)
2019-12-24 14:30 UTC, postix
Details
Video of Spectacle. (522.86 KB, video/mp4)
2019-12-24 15:29 UTC, postix
Details
Video of Spectacle #2. (323.33 KB, video/mp4)
2019-12-24 15:33 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2019-12-24 14:30:26 UTC
Created attachment 124693 [details]
Video of the issue.

SUMMARY

There's an inline warning in a red rectangular box. Its text is blurry first but then quickly becomes sharp.
I think the blurriness in the beginning is a bug or at least not pretty.

Please see the video.

STEPS TO REPRODUCE
1. Go to a folder in Dolphin
2. Delete this folder via the terminal
3. Press F5 in Dolphin


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 5.17.4
KDE Frameworks Version: 5.66.0
Qt Version: 5.13.2

ADDITIONAL INFORMATION
Scaling: 1.5
Comment 1 Nate Graham 2019-12-24 15:25:27 UTC
Does the same thing happen in Spectacle after you click the "Copy to Clipboard" button in the main window?
Comment 2 postix 2019-12-24 15:29:11 UTC
Created attachment 124696 [details]
Video of Spectacle.

(In reply to Nate Graham from comment #1)
> Does the same thing happen in Spectacle after you click the "Copy to
> Clipboard" button in the main window?

Not the same, instead the screenshot becomes smaller and bigger again until the inline message appears -- without blurry, though.

This seems to be buggy, too, though.
Comment 3 postix 2019-12-24 15:33:46 UTC
Created attachment 124697 [details]
Video of Spectacle #2.

Taking another screenshot, I could reproduce it with Spectacle now. Thus it's not a Dolphin issue per se.
Comment 4 Nate Graham 2019-12-24 15:36:18 UTC
I had a feeling. :)
Comment 5 postix 2019-12-24 16:19:40 UTC
(In reply to Nate Graham from comment #4)
> I had a feeling. :)

And your feeling was right.

Thank you for your restless bug triaging this year. I wish you a Merry Christmas and a leisurely Christmas's Eve for you and your family!!
Comment 6 Nate Graham 2019-12-24 17:50:39 UTC
You're very welcome, and same to you and yours!
Comment 7 Kai Uwe Broulik 2020-01-07 12:00:15 UTC
Git commit fcc7978c7cf1f07344190676f223a6e4220e3251 by Kai Uwe Broulik.
Committed on 07/01/2020 at 11:59.
Pushed by broulik into branch 'master'.

[KMessageWidget] Use devicePixelRatioF for animation pixmap

Ensures contents stay crisp during the animation by setting the correct fractional device pixel ratio.

Differential Revision: https://phabricator.kde.org/D26490

M  +2    -2    src/kmessagewidget.cpp

https://commits.kde.org/kwidgetsaddons/fcc7978c7cf1f07344190676f223a6e4220e3251