[KMessageWidget] Use devicePixelRatioF for animation pixmap

Ensures contents stay crisp during the animation by setting the correct fractional device pixel ratio.

BUG: 415528

Differential Revision: https://phabricator.kde.org/D26490